test/files/neg/suggest-similar.scala
package example

class Weehawken
object Weehawken {
  var flippity = 1
  type Blippitx = Int
}

class A {
  Weehawken.flippitx = 123
  Nil map identiyt
  new example.Eeehawken
}

object B {
  import scala.io.StdIn.{readline, readInt}
}

object C {
  import scala.io.stdin.{readLine => line}
}

class Hohokus {
  protected def bar1
  protected[example] def bar2
}
object Hohokus {
  def foo1 = 1
  def foo2 = 2
  def foo3 = 3
  def foo4 = 4
  def foo5 = 5
  def foo6 = 6
}

object D {
  Hohokus.foo
}

object E {
  new Hohokus().bar // don't suggest bar1
}
